# grpc-react-cpp

./: Dockerfile-envoy  Dockerfile-server  docker-compose.yml  envoy.yaml
client/: package-lock.json  package.json
client/src/: App.tsx  index.css
client/src/proto/: UserServiceClientPb.ts  user_pb.d.ts  user_pb.js
server/: .env.example  .gitignore  CMakeLists.txt  readme.md
server/src/: main.cpp
server/src/database/: database.cpp  database.h
server/src/env/: env_reader.cpp  env_reader.h
server/src/generated_protos/: user.grpc.pb.cc  user.grpc.pb.h  user.pb.cc  user.pb.h
server/src/globals/: globals.h
server/src/grpc/: user_grpc_handler.cpp  user_grpc_handler.h
server/src/protos/: user.proto
server/src/sse/: sse_handler.cpp  sse_handler.h
server/src/threads/: threads_container.cpp  threads_container.h
server/src/zeromq/: zeromq_handler.cpp  zeromq_handler.h
